# aish

./: .gitignore  AGENTS.md  CONTRIBUTING.md  README.md  autocomplete-flow.md  command-construction-flow.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
config/: default.toml
docs/: PLAN.md  autocomplete-flow.md  command-construction-flow.md
shell/zsh/: aish.zsh  autocomplete.zsh  nl-command.zsh
src/aish/: __init__.py  __main__.py  cli.py  config.py  context.py  daemon.py  llm.py  prompts.py  safety.py
src/aish/shell/: aish.zsh  nl-command.zsh
src/ghst/: __init__.py  __main__.py  cli.py  config.py  context.py  daemon.py  llm.py  prompts.py  safety.py
src/ghst/shell/: autocomplete.zsh  ghst.zsh  nl-command.zsh
src/shai/: __init__.py  __main__.py  cli.py  config.py  context.py  daemon.py  llm.py  prompts.py  safety.py
src/shai/shell/: autocomplete.zsh  nl-command.zsh  shai.zsh
tests/: test_cli.py  test_config.py  test_daemon.py  test_integration.py  test_llm.py  test_prompts.py  test_safety.py
