[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ghst"
version = "0.4.0"
description = "AI-powered shell plugin — ghost-text autocomplete, natural language commands, error correction, and history search"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "Matt" }]
keywords = ["shell", "zsh", "ai", "autocomplete", "llm"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: System :: Shells",
]
dependencies = [
    "httpx[http2]>=0.27",
    "tomli>=2.0; python_version < '3.11'",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.8",
    "basedpyright>=1.20",
]

[project.scripts]
ghst = "ghst.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/ghst"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py310"
line-length = 100
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]

[tool.basedpyright]
pythonVersion = "3.10"
typeCheckingMode = "standard"
venvPath = "."
venv = ".venv"
